Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1266,7 +1266,7 @@ fieldset {
         order: 1;
     }
     #profilediv {
-        width: 35%;
+        width: 40%;
         text-align: left;
         order: 3;
     }
